# itertools

./: .gitignore  CMakeLists.txt  README.md
include/itertools/: accumulate.hpp  chain.hpp  combinations.hpp  combinations_with_replacement.hpp  compress.hpp  count.hpp  cycle.hpp  dropwhile.hpp  filter.hpp  filterfalse.hpp  groupby.hpp  islice.hpp  itertools.hpp  permutations.hpp  product.hpp  range_view.hpp  repeat.hpp  starmap.hpp  takewhile.hpp  tee.hpp  zip.hpp  zip_longest.hpp
test/: test_accumulate.cpp  test_chain.cpp  test_combinations.cpp  test_combinations_with_replacement.cpp  test_compress.cpp  test_count.cpp  test_cycle.cpp  test_dropwhile.cpp  test_filter.cpp  test_filterfalse.cpp  test_groupby.cpp  test_islice.cpp  test_itertools.cpp  test_permutations.cpp  test_product.cpp  test_range_view.cpp  test_repeat.cpp  test_starmap.cpp  test_takewhile.cpp  test_tee.cpp  test_zip.cpp  test_zip_longest.cpp
